[gd_scene load_steps=2 format=3 uid="uid://pause_menu_001"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSADO"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continuar"

[node name="RestartButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Reintentar Nivel"

[node name="MainMenuButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Men√∫ Principal"

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/ResumeButton" to="Control" method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/RestartButton" to="Control" method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/MainMenuButton" to="Control" method="_on_main_menu_button_pressed"]
